Move2 java17 (#10)
* Moving to Java 17 and using new commons library

* updated packages after using latest library

* use new function

* move code to common library

* using new switch expressions

* updated

---------

Co-authored-by: sfali <syed.f.ali@improving.com>